# know_kernel

./: .gitignore  README.md  pyproject.toml  start.bat  start.sh
data/: batch_briefs_001.py  batch_briefs_002.py  batch_briefs_003.py  batch_briefs_004.py  batch_briefs_005.py  batch_briefs_006.py  batch_briefs_007.py  batch_briefs_008.py  batch_briefs_009.py  batch_briefs_010.py  cleanup_concepts.py  cleanup_concepts_v2.py  enrich_batch_001.py  enrich_batch_002.py  enrich_batch_003.py  enrich_batch_004.py  enrich_batch_005.py  enrich_batch_006.py  enrich_batch_007.py  enrich_batch_008.py  enrich_batch_009.py  enrich_batch_010.py  enrich_batch_011.py  enrich_batch_012.py  enrich_batch_013.py  enrich_batch_014.py  enrich_batch_015.py  enrich_batch_016.py  enrich_batch_017.py  enrich_batch_018.py  enrich_batch_019.py  enrich_batch_020.py  enrich_batch_021.py  enrich_batch_022.py  extract_research_briefs.py  feed_configs.json  feed_state.json  fetch_abstracts.py  fetch_abstracts_openalex.py  fix_cpufreq.py  (+9 more)
docs/: architecture.md  specification.md
scripts/: download_research_pdfs.py  populate_excerpts_and_code.py  populate_tier2_code.py  remediate_sources.py  rewrite_source_urls.py
tests/: conftest.py  test_claim_extractor.py  test_download_pdfs.py  test_e2e_pipeline.py  test_export.py  test_export_cli.py  test_export_exporter.py  test_extract_cli.py  test_feed_cli.py  test_graph_briefing.py  test_graph_diagnostics.py  test_graph_engine.py  test_graph_inference.py  test_graph_optimization.py  test_graph_rules.py  test_graph_schema.py  test_graph_scoring.py  test_graph_structural.py  test_ingest_classifier.py  test_ingest_cli.py  test_ingest_extractor.py  test_ingest_feed.py  test_ingest_gate.py  test_ingest_parser.py  test_ingest_pipeline.py  test_web.py  (+9 more)
(+90 files in other folders)
