[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "know-kernel"
version = "0.1.0"
description = "Kernel-design intelligence system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ingest = [
    "pymupdf>=1.24",
    "scancode-toolkit>=32",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
kk-ingest = "ingest.cli:main"
kk-web = "web.app:main"
kk-export = "export.cli:main"
kk-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graph", "src/ingest", "src/export", "src/web", "src/mcp_server"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
